# avatars

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  scenario.py
app/providers/: __init__.py
app/providers/conversation/: __init__.py  base.py  mock.py
app/providers/speech/: __init__.py  base.py  mock.py
app/providers/transcription/: __init__.py  base.py  mock.py
app/repositories/: __init__.py  scenario_repository.py
demo-app/: .env.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json
demo-app/app/: layout.js  page.js
demo-app/app/api/summary/: route.js
demo-app/app/api/token/: route.js
demo-app/app/api/translate/: route.js
demo-app/app/api/tts/: route.js
demo-app/evals/: README.md  run-prompt-evals.mjs
demo-app/lib/: audio.js  prompt.js  scenario.js  stages.js  summaryPrompt.js  theme.js  ui.js
prompts/: session_summary.md  zurich_registration_system.md
scenarios/: zurich_registration_a1.json
tests/: test_health.py  test_prompts.py  test_providers.py  test_scenario_model.py  test_scenario_repository.py
